# chess-roguelike-cpp

./: .gitmodules  BoardState.cpp  BoardState.h  CMakeLists.txt  Move.h  Piece.cpp  Piece.h  PieceState.cpp  PieceState.h  PieceType.h  README.md  Team.cpp  Team.h  Vector2i.h  glad.c  main.cpp  opengl-cpp.sln  opengl-cpp.vcxproj  opengl-cpp.vcxproj.filters  vao.cpp  vao.h  vcpkg.json
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: ArmyGenerator.cpp  ArmyGenerator.h  BoardState.cpp  BoardState.h  Game.cpp  Game.h  Move.h  Piece.cpp  Piece.h  Team.cpp  Team.h  main.cpp
src/math/: Vector2.h
